docs: update README with JWT auth details\nbackend: constructor injection, custom exceptions, JWT filter and jjwt 0.11.5\nfix: SonarLint cleanups (unused imports, primitives, Stream.toList)